fix: incorrect image size on mobile

--- a/src/sections/NftPassport/NftPassport.module.scss
+++ b/src/sections/NftPassport/NftPassport.module.scss
@@ -117,14 +117,14 @@
       @media (max-width: 505px) {
          .passImage {
             width: 360px;
-            height: 550px;
+            height: 530px;
          }
       }
 
       @media (max-width: 420px) {
          .passImage {
             width: 320px;
-            height: 510px;
+            height: 495px;
          }
       }
    }
